--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <title>Nice Portfolio</title>
+	
+	
+   <meta content="width=device-width,initial-scale=1" name="viewport">
+   <meta content="A bi-monthly newsletter featuring the best design portfolios on the web" name="description">
+   <meta content="HTML,CSS,XML,JavaScript" name="keywords">
+   <meta content="Nice Portfolio" name="author">
+   <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
+   <link href="fonts/fonts.css" rel="stylesheet">
+   <link href="css/style.css" rel="stylesheet">
+
+	
 </head>
 
 <body>
