--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Nice Portfolio</title>
-	
-	
-   <meta content="width=device-width,initial-scale=1" name="viewport">
-   <meta content="A bi-monthly newsletter featuring the best design portfolios on the web" name="description">
-   <meta content="HTML,CSS,XML,JavaScript" name="keywords">
-   <meta content="Nice Portfolio" name="author">
-   <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
-   <link href="fonts/fonts.css" rel="stylesheet">
-   <link href="css/style.css" rel="stylesheet">
-
-	
+	<meta charset="UTF-8">
+	<title>Nice Portfolio</title>
+	<meta content="width=device-width,initial-scale=1" name="viewport">
+	<meta content="A bi-monthly newsletter featuring the best design portfolios on the web" name="description">
+	<meta content="HTML,CSS,XML,JavaScript" name="keywords">
+	<meta content="Nice Portfolio" name="author">
+	<link href="img/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+	<link href="img/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+	<link href="fonts/fonts.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 </head>
-
 <body>
-	Nice Portfolio will be back soon.
-	
-	
-	
-	
-	</body>
+	<h1>
+		Nice Portfolio will be back soon.
+	</h1>
+</body>
 </html>
