--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-	<h1>
-		Nice Portfolio will be back soon.
-	</h1>
+	<marquee>
+		<h1>
+			Nice Portfolio will be back soon.
+		</h1>
+	</marquee>
 </body>
 </html>
