--- a/index.html
+++ b/index.html
@@ -11,92 +11,40 @@
 	<link href="img/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
 	<link href="fonts/fonts.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
+		    <script type="application/javascript">
+      var ctx = null;
+      var x_icon = 0;
+      var y_icon = 0;
+      var stepX = 1;
+      var stepY = 1;
+      var size_x = 23;
+      var size_y = 22;
+      var canvas_size_x = 480;
+      var canvas_size_y = 320;
+      var anim_img = null;
+      
+      function draw() {
+        var canvas = document.getElementById("canvas");
+        ctx = canvas.getContext("2d");
+        anim_img = new Image(size_x, size_y);
+        anim_img.onload = function() { setInterval('myAnimation()', 10); }
+        anim_img.src = '';
+      }
+      function myAnimation() {
+        ctx.clearRect(0, 0, canvas_size_x, canvas_size_y);
+       if (x_icon < 0 || x_icon > canvas_size_x - size_x) {stepX = -stepX; }
+       if (y_icon < 0 || y_icon > canvas_size_y - size_y) {stepY = -stepY; }
+          x_icon += stepX;
+          y_icon += stepY;
+       ctx.drawImage(anim_img, x_icon, y_icon);
+      }
+    </script>
 </head>
 <body>
-	<div align="center" id="img" style="position:absolute;">
-<img src="img/logo.png" onMouseDown="pauseResume();">
-</div>
-<SCRIPT LANGUAGE="JavaScript">
 
-<!-- Begin
-var step = 5;
-var delay = 30;
-var height = 0;
-var Hoffset = 0;
-var Woffset = 0;
-var yon = 0;
-var xon = 0;
-var pause = true;
-var interval;
-var name = navigator.appName;
-if(name == "Microsoft Internet Explorer") name = true;
-else name = false;
-var xPos = 20;
-if(name) var yPos = document.body.clientHeight;
-else var yPos = window.innerHeight;
-function changePos() {
-if(name) {
-width = document.body.clientWidth;
-height = document.body.clientHeight;
-Hoffset = img.offsetHeight;
-Woffset = img.offsetWidth;
-img.style.left = xPos + document.body.scrollLeft;
-img.style.top = yPos + document.body.scrollTop;
-}
-else {
-height = window.innerHeight;
-width = window.innerWidth;
-Hoffset =33;
-Woffset =30;
-document.getElementById('img').style.top = yPos + window.pageYOffset;
-document.getElementById('img').style.left = xPos + window.pageXOffset;
-}
-if (yon) {
-yPos = yPos + step;
-}
-else {
-yPos = yPos - step;
-}
-if (yPos < 0) {
-yon = 1;
-yPos = 0;
-}
-if (yPos >= (height - Hoffset)) {
-yon = 0;
-yPos = (height - Hoffset);
-}
-if (xon) {
-xPos = xPos + step;
-}
-else {
-xPos = xPos - step;
-}
-if (xPos < 0) {
-xon = 1;
-xPos = 0;
-}
-if (xPos >= (width - Woffset)) {
-xon = 0;
-xPos = (width - Woffset);
-   }
-}
-function start() {
-document.getElementById('img').style.visibility = "visible";
-interval = setInterval('changePos()',delay);
-}
-function pauseResume() {
-if(pause) {
-clearInterval(interval);
-pause = false;
-}
-else {
-interval = setInterval('changePos()',delay);
-pause = true;
-   }
-}
-start();
-//  End -->
-</script>
+
+  <body onload="draw();">
+    <canvas id="canvas" width="100%" height="100%" style=""></canvas>
 	
 	<marquee>
 		<h1>
