--- a/index.html
+++ b/index.html
@@ -11,43 +11,14 @@
 	<link href="img/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
 	<link href="fonts/fonts.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-		    <script type="application/javascript">
-      var ctx = null;
-      var x_icon = 0;
-      var y_icon = 0;
-      var stepX = 1;
-      var stepY = 1;
-      var size_x = 23;
-      var size_y = 22;
-      var canvas_size_x = 480;
-      var canvas_size_y = 320;
-      var anim_img = null;
-      
-      function draw() {
-        var canvas = document.getElementById("canvas");
-        ctx = canvas.getContext("2d");
-        anim_img = new Image(size_x, size_y);
-        anim_img.onload = function() { setInterval('myAnimation()', 10); }
-        anim_img.src = '';
-      }
-      function myAnimation() {
-        ctx.clearRect(0, 0, canvas_size_x, canvas_size_y);
-       if (x_icon < 0 || x_icon > canvas_size_x - size_x) {stepX = -stepX; }
-       if (y_icon < 0 || y_icon > canvas_size_y - size_y) {stepY = -stepY; }
-          x_icon += stepX;
-          y_icon += stepY;
-       ctx.drawImage(anim_img, x_icon, y_icon);
-      }
-    </script>
+		    
 </head>
 
 
 
-  <body onload="draw();">
-    <canvas id="canvas" width="100%" height="100%" style=""></canvas>
-	
+  <body>
 	<marquee>
-		<h1>
+		<h1 style="color:blue;">
 			Nice Portfolio will be back soon.
 		</h1>
 	</marquee>
