--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
 
 
   <body>
-	<marquee>
-		<h1 style="color:blue;">
-			Nice Portfolio will be back soon.
-		</h1>
-	</marquee>
+	<!-- Begin MailChimp Signup Form -->
+<div id="mailchimp"><form id="mc-embedded-subscribe-form" class="validate" action="//purpleplanet.us12.list-manage.com/subscribe/post?u=4362628afc97f7dfcee8b4c8b&amp;id=15f72f6899" method="post" name="mc-embedded-subscribe-form" target="_blank">
+<h2>Did you enjoy this article?</h2>
+  <p>Don't miss out on our new content. Sign Up!</p>
+
+<input id="mce-FNAME" class="name" name="FNAME" size="30" type="text" value="" placeholder="Enter your name" />
+<input id="mce-EMAIL" class="required email" name="EMAIL" size="30" type="email" value="" placeholder="Enter your email" />
+<input id="mc-embedded-subscribe" class="button" name="subscribe" type="submit" value="Sign up" />
+</form></div>
+<!--End mc_embed_signup-->
 </body>
 </html>
