--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
 	<!-- Begin MailChimp Signup Form -->
 <div id="mailchimp"><form id="mc-embedded-subscribe-form" class="validate" action="//purpleplanet.us12.list-manage.com/subscribe/post?u=4362628afc97f7dfcee8b4c8b&amp;id=15f72f6899" method="post" name="mc-embedded-subscribe-form" target="_blank">
-<h2>Did you enjoy this article?</h2>
-  <p>Don't miss out on our new content. Sign Up!</p>
+<h2>Nice Portfolio</h2>
+  <p>Five really nice portfolios in your inbox, twice a month</p>
 
 <input id="mce-FNAME" class="name" name="FNAME" size="30" type="text" value="" placeholder="Enter your name" />
 <input id="mce-EMAIL" class="required email" name="EMAIL" size="30" type="email" value="" placeholder="Enter your email" />
