--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body>
 	<!-- Begin MailChimp Signup Form -->
-<div id="mailchimp"><form id="mc-embedded-subscribe-form" class="validate" action="//purpleplanet.us12.list-manage.com/subscribe/post?u=4362628afc97f7dfcee8b4c8b&amp;id=15f72f6899" method="post" name="mc-embedded-subscribe-form" target="_blank">
+<div id="mailchimp"><form id="mc-embedded-subscribe-form" class="validate" action="https://gmail.us20.list-manage.com/subscribe/post?u=b1803b2c8d4a902e8bebeff59&amp;id=898670c262" method="post" name="mc-embedded-subscribe-form" target="_blank">
 <h2>Nice Portfolio</h2>
   <p>Five really nice portfolios in your inbox, twice a month</p>
 
