--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <h2>Nice Portfolio</h2>
   <p>Five really nice portfolios in your inbox, twice a month</p>
 
-<input id="mce-FNAME" class="name" name="FNAME" size="30" type="text" value="" placeholder="Enter your name" />
-<input id="mce-EMAIL" class="required email" name="EMAIL" size="30" type="email" value="" placeholder="Enter your email" />
+<input id="mce-FNAME" class="name" name="FNAME" size="30" type="text" value="" placeholder="Enter your name" /><br>
+<input id="mce-EMAIL" class="required email" name="EMAIL" size="30" type="email" value="" placeholder="Enter your email" /><br>
 <input id="mc-embedded-subscribe" class="button" name="subscribe" type="submit" value="Sign up" />
 </form></div>
 <!--End mc_embed_signup-->
