--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 <div id="mailchimp"><form id="mc-embedded-subscribe-form" class="validate" action="https://gmail.us20.list-manage.com/subscribe/post?u=b1803b2c8d4a902e8bebeff59&amp;id=898670c262" method="post" name="mc-embedded-subscribe-form" target="_blank">
 <h2>Nice Portfolio</h2>
   <p>Five really nice portfolios in your inbox, twice a month</p>
-
+<div style="width:600px;">
 <input id="mce-FNAME" class="name" name="FNAME" size="30" type="text" value="" placeholder="Enter your name" /><br>
 <input id="mce-EMAIL" class="required email" name="EMAIL" size="30" type="email" value="" placeholder="Enter your email" /><br>
 <input id="mc-embedded-subscribe" class="button" name="subscribe" type="submit" value="Sign up" />
-</form></div>
+	</div></form>
+	
+	</div>
 <!--End mc_embed_signup-->
 </body>
 </html>
