--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
   <section class="container">
  
 <div id="content">
-<div id="branding"><img alt="Nice Portfolio Logo" class="logo" src="img/_logo.png"></div>
+<div id="branding"><img alt="Nice Portfolio Logo" class="logo" src="img/logo.png"></div>
       <h2>
 A monthly newsletter which rounds up the most inspiring new design portfolios on the web.</h2>
   
 
   <p>Formally a <a href="https://niceportfolio.tumblr.com" target="blank">Tumblr</a> (RIP), Nice Portfolio is now a curated <span class="tooltip--bottom" data-tooltip="Hello World!">email newsletter</span> delivering best-in-class examples of portfolio design directly to your inbox every month.</p>
 
-  <h5 style="display: none;"><span style="animation: colorchange 10s infinite; 
-      -webkit-animation: colorchange 10s infinite;">Sign up now for our July edition</span></h5>
+ 
 
 
     <!-- Begin MailChimp Signup Form -->
