--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <title>Nice Portfolio</title>
   
     <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="A bi-monthly newsletter featuring the best design portfolios on the web" name="description">
+  <meta content="A monthly newsletter rounding up the most inspiring new design portfolios on the web" name="description">
   <meta content="HTML,CSS,XML,JavaScript" name="keywords">
   <meta content="Nice Portfolio" name="author">
   <link href="img/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
