--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div id="content">
 <div id="branding"><img alt="Nice Portfolio Logo" class="logo" src="img/logo.png"></div>
       <h2>
-A monthly newsletter which rounds up the most inspiring new design portfolios on the web.</h2>
+A monthly newsletter rounding up the most inspiring new design portfolios on the web</h2>
   
 
   <p>Formally a <a href="https://niceportfolio.tumblr.com" target="blank">Tumblr</a> (RIP), Nice Portfolio is now a curated <span class="tooltip--bottom" data-tooltip="Hello World!">email newsletter</span> delivering best-in-class examples of portfolio design directly to your inbox every month.</p>
