--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ A monthly newsletter rounding up the most inspiring new design portfolios on the
   
   </div>
 <!--End mc_embed_signup-->
+<h5 style="margin-bottom:0;">Foliolosophy:</h5>
 
   <p class="lowkey">We focus on the work of individual designers, rather than agencies. We lean towards work which takes alternative, innovative aproaches to solving that evergreen problem of how best to showcase design work online.  </p>
 
