--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ A monthly newsletter rounding up the most inspiring new design portfolios on the
 
   <p class="lowkey">We focus on the work of individual designers, rather than agencies. We lean towards work which takes alternative, innovative aproaches to solving that evergreen problem of how best to showcase design work online.  </p>
 
-<h5><a href="https://twitter.com/@niceportfolio" target="blank">Follow us on Twitter</a> • <a href="https://forms.gle/An6hbH9TDxuW6yjJ6" target="blank">Submit a portfolio</a><br>Made by <a href="https://twitter.com/@kimw" target="blank">@kimw</a></h5>
+<h5><a href="https://twitter.com/@niceportfolio" target="blank">Follow us on Twitter</a> • <a href="https://forms.gle/An6hbH9TDxuW6yjJ6" target="blank">Submit a portfolio</a><br>Made by @<a href="https://twitter.com/@kimw" target="blank">kimw</a></h5>
 
   </div>
 </section>
