--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </script>
 
   <meta charset="UTF-8">
-  <title>Nice Portfolio</title>
+  <title>Nice Portfolio – Monthly Portfolio Inspiration</title>
   
     <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="A monthly newsletter rounding up the most inspiring new design portfolios on the web" name="description">
