--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <section class="container">
  
 <div id="content">
-<div id="branding"><img alt="Nice Portfolio Logo" class="logo" src="img/logotype.png"></div>
+<div id="branding"><img alt="Nice Portfolio Logo" class="logo" src="img/logostack.png"></div>
       <h2>
 A monthly newsletter rounding up the most inspiring new design portfolios on the web</h2>
   
