--- a/index.html
+++ b/index.html
@@ -32,7 +32,25 @@
   <section class="container">
  
 <div id="content">
-<div id="branding"><img alt="Nice Portfolio Logo" class="logo" src="img/logostack.png"></div>
+<div id="branding"><h4>
+  <span class="fade-in-1">N</span><span class="fade-in-3">i</span><span class="fade-in-2">c</span><span class="fade-in-5">e</span>
+  <span class="fade-in-3">P</span><span class="fade-in-2">o</span><span class="fade-in-1">r</span><span class="fade-in-4">t</span><span class="fade-in-1">f</span><span class="fade-in-5">o</span><span class="fade-in-2">l</span><span class="fade-in-3">i</span><span class="fade-in-4">o</span><br>
+
+
+  <span class="fade-in-4">N</span><span class="fade-in-5">i</span><span class="fade-in-1">c</span><span class="fade-in-3">e</span>
+  <span class="fade-in-5">P</span><span class="fade-in-2">o</span><span class="fade-in-4">r</span><span class="fade-in-5">t</span><span class="fade-in-3">f</span><span class="fade-in-4">o</span><span class="fade-in-5">l</span><span class="fade-in-2">i</span><span class="fade-in-1">o</span><br>
+
+
+  <span class="fade-in-5">N</span><span class="fade-in-1">i</span><span class="fade-in-3">c</span><span class="fade-in-2">e</span>
+  <span class="fade-in-1">P</span><span class="fade-in-5">o</span><span class="fade-in-3">r</span><span class="fade-in-3">t</span><span class="fade-in-4">f</span><span class="fade-in-1">o</span><span class="fade-in-1">l</span><span class="fade-in-4">i</span><span class="fade-in-4">o</span><br>
+
+
+  <span class="fade-in-2">N</span><span class="fade-in-4">i</span><span class="fade-in-5">c</span><span class="fade-in-4">e</span>
+  <span class="fade-in-3">P</span><span class="fade-in-4">o</span><span class="fade-in-1">r</span><span class="fade-in-2">t</span><span class="fade-in-5">f</span><span class="fade-in-1">o</span><span class="fade-in-5">l</span><span class="fade-in-1">i</span><span class="fade-in-5">o</span><br>
+
+
+  <span class="fade-in-4">N</span><span class="fade-in-2">i</span><span class="fade-in-4">c</span><span class="fade-in-1">e</span>
+  <span class="fade-in-3">P</span><span class="fade-in-2">o</span><span class="fade-in-4">r</span><span class="fade-in-1">t</span><span class="fade-in-2">f</span><span class="fade-in-5">o</span><span class="fade-in-2">l</span><span class="fade-in-5">i</span><span class="fade-in-3">o</span><br></h4></div>
       <h2>
 A monthly newsletter rounding up the most inspiring new design portfolios on the web</h2>
   
