--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 				<span class="fade-in-2">N</span><span class="fade-in-4">i</span><span class="fade-in-5">c</span><span class="fade-in-4">e</span> <span class="fade-in-3">P</span><span class="fade-in-4">o</span><span class="fade-in-1">r</span><span class="fade-in-2">t</span><span class="fade-in-5">f</span><span class="fade-in-1">o</span><span class="fade-in-5">l</span><span class="fade-in-1">i</span><span class="fade-in-5">o</span><br>
 				<span class="fade-in-4">N</span><span class="fade-in-2">i</span><span class="fade-in-4">c</span><span class="fade-in-1">e</span> <span class="fade-in-3">P</span><span class="fade-in-2">o</span><span class="fade-in-4">r</span><span class="fade-in-1">t</span><span class="fade-in-2">f</span><span class="fade-in-5">o</span><span class="fade-in-2">l</span><span class="fade-in-5">i</span><span class="fade-in-3">o</span><br></h4>
 			</div>
-			<h2>A monthly newsletter rounding up the most inspiring new design portfolios on the web</h2><!-- Begin MailChimp Signup Form -->
-			<div id="mailchimp">
+			<h2 class="fade-in-6>A monthly newsletter rounding up the most inspiring new design portfolios on the web</h2><!-- Begin MailChimp Signup Form -->
+			<div id="mailchimp" class="fade-in-6>
 				<form action="https://gmail.us20.list-manage.com/subscribe?u=b1803b2c8d4a902e8bebeff59&id=898670c262" class="validate" id="mc-embedded-subscribe-form" method="post" name="mc-embedded-subscribe-form" target="_blank">
 					<div style="width:345px;margin:auto;">
 						<input class="required email" id="mce-EMAIL" name="EMAIL" placeholder="Enter your email address" size="30" type="email" value=""><br>
@@ -42,9 +42,9 @@
 					</div>
 				</form>
 			</div><!--End mc_embed_signup-->
-			<h5 style="margin-bottom:0;margin-top:-32px;">Foliolosophy:</h5>
-			<p class="lowkey">We focus on the work of individual designers, rather than agencies. We lean towards work which takes alternative, innovative aproaches to solving that evergreen problem of how best to showcase design work online.</p>
-			<h5><a href="https://twitter.com/@niceportfolio" target="blank">Follow us on Twitter</a> •&nbsp;<a href="https://forms.gle/An6hbH9TDxuW6yjJ6" target="blank">Submit a portfolio</a><br>
+			<h5 class="fade-in-6 style="margin-bottom:0;margin-top:-32px;">Foliolosophy:</h5>
+			<p class="lowkey fade-in-6">We focus on the work of individual designers, rather than agencies. We lean towards work which takes alternative, innovative aproaches to solving that evergreen problem of how best to showcase design work online.</p>
+			<h5 class="fade-in-6><a href="https://twitter.com/@niceportfolio" target="blank">Follow us on Twitter</a> •&nbsp;<a href="https://forms.gle/An6hbH9TDxuW6yjJ6" target="blank">Submit a portfolio</a><br>
 			Made by @<a href="https://twitter.com/@kimw" target="blank">kimw</a></h5>
 		</div>
 	</section>
