--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 <body>
 	<section class="container">
 		<div id="content">
-			<div id="branding">
+			<div id="branding" class="fade-in-1"><img alt="Nice Portfolio Logo" class="logo" src="img/logo.png">
 				<h4 style="display:none;"><span class="fade-in-1">N</span><span class="fade-in-3">i</span><span class="fade-in-2">c</span><span class="fade-in-5">e</span> <span class="fade-in-3">P</span><span class="fade-in-2">o</span><span class="fade-in-1">r</span><span class="fade-in-4">t</span><span class="fade-in-1">f</span><span class="fade-in-5">o</span><span class="fade-in-2">l</span><span class="fade-in-3">i</span><span class="fade-in-4">o</span><br>
 				<span class="fade-in-4">N</span><span class="fade-in-5">i</span><span class="fade-in-1">c</span><span class="fade-in-3">e</span> <span class="fade-in-5">P</span><span class="fade-in-2">o</span><span class="fade-in-4">r</span><span class="fade-in-5">t</span><span class="fade-in-3">f</span><span class="fade-in-4">o</span><span class="fade-in-5">l</span><span class="fade-in-2">i</span><span class="fade-in-1">o</span><br>
 				<span class="fade-in-5">N</span><span class="fade-in-1">i</span><span class="fade-in-3">c</span><span class="fade-in-2">e</span> <span class="fade-in-1">P</span><span class="fade-in-5">o</span><span class="fade-in-3">r</span><span class="fade-in-3">t</span><span class="fade-in-4">f</span><span class="fade-in-1">o</span><span class="fade-in-1">l</span><span class="fade-in-4">i</span><span class="fade-in-4">o</span><br>
 				<span class="fade-in-2">N</span><span class="fade-in-4">i</span><span class="fade-in-5">c</span><span class="fade-in-4">e</span> <span class="fade-in-3">P</span><span class="fade-in-4">o</span><span class="fade-in-1">r</span><span class="fade-in-2">t</span><span class="fade-in-5">f</span><span class="fade-in-1">o</span><span class="fade-in-5">l</span><span class="fade-in-1">i</span><span class="fade-in-5">o</span><br>
 				<span class="fade-in-4">N</span><span class="fade-in-2">i</span><span class="fade-in-4">c</span><span class="fade-in-1">e</span> <span class="fade-in-3">P</span><span class="fade-in-2">o</span><span class="fade-in-4">r</span><span class="fade-in-1">t</span><span class="fade-in-2">f</span><span class="fade-in-5">o</span><span class="fade-in-2">l</span><span class="fade-in-5">i</span><span class="fade-in-3">o</span><br></h4>
 			</div>
-			<div class="fade-in-6">
+			<div class="fade-in-2">
 			<h2>A monthly newsletter rounding up the most inspiring new design portfolios on the web</h2><!-- Begin MailChimp Signup Form -->
 			<div id="mailchimp" class="fade-in-6>
 				<form action="https://gmail.us20.list-manage.com/subscribe?u=b1803b2c8d4a902e8bebeff59&id=898670c262" class="validate" id="mc-embedded-subscribe-form" method="post" name="mc-embedded-subscribe-form" target="_blank">
