--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
       <div id="credit"><a class="links credit" href="https://twitter.com/@kimw" target="blank">Made by @kimw</a></div>
 
-      <div id="twitter"><a class="links twitter" href="https://twitter.com/@niceportfolio" target="blank">Twitter</a></div>
+      <div id="social"><a class="links social" href="https://twitter.com/@niceportfolio" target="blank">Twitter</a> / <a class="links social" href="https://www.instagram.com/niceportfolio/" target="blank">IG</a></div>
             <div id="submit"><a class="links submit" href="https://forms.gle/An6hbH9TDxuW6yjJ6" target="blank">Submit folio</a></div>
 
   <script type="text/javascript">window.onkeydown = function(event){
