--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        <a class="links sitename" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">Nice Portfolio</a>
 
 </div>
-      <div id="credit"><a class="links credit" href="https://twitter.com/@kimw" target="blank">Made by @kimw</a></div>
+      <div id="credit"><a class="links credit" href="https://twitter.com/@kimw" target="blank">By @kimw</a></div>
 
       <div id="social"><a class="links social" href="https://twitter.com/@niceportfolio" target="blank">Twitter</a> / <a class="links social" href="https://www.instagram.com/niceportfolio/" target="blank">IG</a></div>
             <div id="submit"><a class="links submit" href="https://forms.gle/An6hbH9TDxuW6yjJ6" target="blank">Submit folio</a></div>
