--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body id="body" class="light-mode"> 
 
-  <a id="getportfolio" href="javascript:openSite()">Push button for portfolio <img src="smile.png" alt="Smile!" style="
+  <a id="getportfolio" href="javascript:openSite()">Push button for portfolio <img src="smile2.png" alt="Smile!" style="
     height: 22px;
     margin-left: 6px;
     padding-right: 6px;
