--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
 </head>
 <body id="body" class="light-mode"> 
 
-  <a id="getportfolio" href="javascript:openSite()">Push button for portfolio <img src="smile2.png" alt="Smile!" style="
-    height: 22px;
-    margin-left: 6px;
-    padding-right: 6px;
-"></a><br>
+  <a id="getportfolio" href="javascript:openSite()">Push button for portfolio :-)</a><br>
 
 
 
