--- a/index.html
+++ b/index.html
@@ -19,21 +19,145 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href="favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
 <link href="favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
-<script type="text/javascript" src="folios.js"></script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/folios.js"></script>
+<script type="text/javascript" src="js/colours.js"></script>
+    <script>
+  $(function(){
+    var includes = $('[data-include]');
+    jQuery.each(includes, function(){
+      var file = 'views/' + $(this).data('include') + '.html';
+      $(this).load(file);
+    });
+  });
+</script>
 </head>
 <body id="body" class="light-mode"> 
 
   <a id="getportfolio" href="javascript:openSite()">Push button for portfolio :-)</a><br>
 
+ <div class="container">
+  <nav id="nav">
+    <div id="close">
+      <span class="menu-label">Hide List</span>
+    </div>
+    <div data-include="portfolios"></div>
 
+    <a class="folioLink" id="colourme" href="https://twitter.com/@kimw" target="blank">Eric Hu</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Frank Chimero</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Adam Ho</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Laura Palmer</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Lee Giles</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Jill Avis</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Kim Walker</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Nayeob Kim</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Zack Smith</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Peter Red</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Julie Green</a>
+      <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Eric Hu</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Frank Chimero</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Adam Ho</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Laura Palmer</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Lee Giles</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Jill Avis</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Kim Walker</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Nayeob Kim</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Zack Smith</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Peter Red</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Julie Green</a>
+      <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Eric Hu</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Frank Chimero</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Adam Ho</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Laura Palmer</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Lee Giles</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Jill Avis</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Kim Walker</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Nayeob Kim</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Zack Smith</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Peter Red</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Julie Green</a>
+      <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Eric Hu</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Frank Chimero</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Adam Ho</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Laura Palmer</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Lee Giles</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Jill Avis</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Kim Walker</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Nayeob Kim</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Zack Smith</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Peter Red</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Julie Green</a>
+      <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Eric Hu</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Frank Chimero</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Adam Ho</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Laura Palmer</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Lee Giles</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Jill Avis</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Kim Walker</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Nayeob Kim</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Zack Smith</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Peter Red</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Julie Green</a>
+      <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Eric Hu</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Frank Chimero</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Adam Ho</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Laura Palmer</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Lee Giles</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Jill Avis</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Kim Walker</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Nayeob Kim</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Zack Smith</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Peter Red</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Julie Green</a>
+      <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Eric Hu</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Frank Chimero</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Adam Ho</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Laura Palmer</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Lee Giles</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Jill Avis</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Kim Walker</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Nayeob Kim</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Zack Smith</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Peter Red</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Julie Green</a>
+      <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Eric Hu</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Frank Chimero</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Adam Ho</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Laura Palmer</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Lee Giles</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Jill Avis</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Kim Walker</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Nayeob Kim</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Zack Smith</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Peter Red</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Julie Green</a>
+      <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Eric Hu</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Frank Chimero</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Adam Ho</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Laura Palmer</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Lee Giles</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Jill Avis</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Kim Walker</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Nayeob Kim</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Zack Smith</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Peter Red</a>
+    <a class="folioLink" href="https://twitter.com/@kimw" target="blank">Julie Green</a>
+
+  </nav>
+
+  <div id="open">
+    <span class="menu-label">Show list</span>
+    
+  </div>
+
+</div>
 
    <div id="sitename">
 
        <a class="links sitename" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">Nice Portfolio</a>
 
 </div>
-      <div id="credit"><a class="links credit" href="https://twitter.com/@kimw" target="blank">By @kimw</a></div>
+      <div id="credit" style="display:none;"><a class="links credit" href="https://twitter.com/@kimw" target="blank">By @kimw</a></div>
 
       <div id="social"><a class="links social" href="https://twitter.com/@niceportfolio" target="blank">Twitter</a> / <a class="links social" href="https://www.instagram.com/niceportfolio/" target="blank">IG</a></div>
             <div id="submit"><a class="links submit" href="https://forms.gle/An6hbH9TDxuW6yjJ6" target="blank">Submit folio</a></div>
