--- a/index.html
+++ b/index.html
@@ -174,6 +174,26 @@
   var currentClass = body.className;
   body.className = currentClass == "dark-mode" ? "light-mode" : "dark-mode";
 }</script>
+    
+    
+<script type="text/javascript">// functions
+
+function MenuOn() {
+    document.getElementById("nav").classList.add("menu-open");
+    document.getElementById("open").classList.add("menu-open");
+}
+
+function MenuOff() {
+    document.getElementById("nav").classList.remove("menu-open");
+    document.getElementById("open").classList.remove("menu-open");
+}
+
+// event listeners
+
+document.getElementById("open").addEventListener("click", MenuOn, true);
+document.getElementById("close").addEventListener("click", MenuOff, true);    </script>
+
+
   
 </body>
 </html>
