--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   $(function(){
     var includes = $('[data-include]');
     jQuery.each(includes, function(){
-      var file = 'views/' + $(this).data('include') + '.html';
+      var file = 'content/' + $(this).data('include') + '.html';
       $(this).load(file);
     });
   });
