--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   $(function(){
     var includes = $('[data-include]');
     jQuery.each(includes, function(){
-      var file = 'content/' + $(this).data('include') + '.html';
+      var file = 'views/' + $(this).data('include') + '.html';
       $(this).load(file);
     });
   });
@@ -41,7 +41,7 @@
     <div id="close">
       <span class="menu-label">Hide List</span>
     </div>
-    <div data-include="portfolios"></div>
+    <div data-include="folios"></div>
 
   </nav>
 
