--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 </div>
       <div id="credit" style="display:none;"><a class="links credit" href="https://twitter.com/@kimw" target="blank">By @kimw</a></div>
 
-      <div id="social"><a class="links social" href="https://twitter.com/@niceportfolio" target="blank">Twitter</a> / <a class="links social" href="https://www.instagram.com/niceportfolio/" target="blank">IG</a></div>
-            <div id="submit"><a class="links submit" href="https://forms.gle/An6hbH9TDxuW6yjJ6" target="blank">Submit folio</a></div>
+      <div id="social"><a class="links social" href="https://twitter.com/@niceportfolio" target="_blank">Twitter</a> / <a class="links social" href="https://www.instagram.com/niceportfolio/" target="_blank">IG</a></div>
+            <div id="submit"><a class="links submit" href="https://forms.gle/An6hbH9TDxuW6yjJ6" target="_blank">Submit folio</a></div>
 
   <script type="text/javascript">window.onkeydown = function(event){
     if(event.keyCode === 32) {
