--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <link href="favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/folios.js"></script>
+    <script type="text/javascript" src="js/hover.js"></script>
 <script type="text/javascript" src="js/colours.js"></script>
     <script>
   $(function(){
