--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@ function MenuOff() {
 document.getElementById("open").addEventListener("click", MenuOn, true);
 document.getElementById("close").addEventListener("click", MenuOff, true);    </script>
 
-
+<script type="text/javascript">
+    $('a.folioLink').hover(function(){
+ $('a.folioLink').not(this).toggleClass('toggle');
+})
+    </script>
   
 </body>
 </html>
