--- a/index.html
+++ b/index.html
@@ -94,9 +94,15 @@ document.getElementById("open").addEventListener("click", MenuOn, true);
 document.getElementById("close").addEventListener("click", MenuOff, true);    </script>
 
 <script type="text/javascript">
-    $('a.folioLink').hover(function(){
- $('a.folioLink').not(this).toggleClass('toggle');
-})
+<script type="text/javascript">
+$('folioLink').mouseover(function () {
+    $('folioLink').not($(this)).addClass('hover');
+});
+
+$('folioLink').mouseout(function () {
+    $('folioLink').not($(this)).removeClass('hover');
+});
+    </script>
     </script>
   
 </body>
