--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <title>Nice Portfolio - Portfolio inspiration at the push of a button</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta content="Design portfolio inspiration at the push of a button" name="description">
+    <meta name="keywords" content="Design, Portfolios, Product Design, Designers, Inspirations, Web Design">
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href="favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
 <link href="favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
