--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 
    <div id="sitename">
 
-       <a class="links sitename" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">Nice Portfolio</a>
+       <a class="links sitename" id="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">Nice Portfolio</a>
 
 </div>
-      <div id="credit" style="display:none;"><a class="links credit" href="https://twitter.com/@kimw" target="blank">By @kimw</a></div>
+     
 
       <div id="social"><a class="links social" href="https://twitter.com/@niceportfolio" target="_blank">Twitter</a> / <a class="links social" href="https://www.instagram.com/niceportfolio/" target="_blank">IG</a></div>
             <div id="submit"><a class="links submit" href="https://forms.gle/An6hbH9TDxuW6yjJ6" target="_blank">Submit folio</a></div>
