--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
    gtag('config', 'UA-6881481-17');
   </script>
 
-  <title>Nice Portfolio - Portfolio inspiration at the push of a button</title>
+  <title>Nice Portfolio - Design portfolio inspiration at the push of a button</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta content="Design portfolio inspiration at the push of a button" name="description">
+    <meta content="A showcase of the best design portfolios on the web today. Push button, get portfolio." name="description">
     <meta name="keywords" content="Design, Portfolios, Product Design, Designers, Inspirations, Web Design">
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href="favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
