--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
 </head>
 <body id="body" class="light-mode"> 
 
-  <a id="getportfolio" href="javascript:openSite()">Push button for portfolio :-)</a><br>
+  <a id="getportfolio" href="javascript:openSite()">
+
+  <span class="fa-hover-hidden">Push button for portfolio</span>
+  <span class="fa-hover-show">Push button for portfolio</span>
+    <i class="icon-folderclosed fa-hover-hidden"></i>
+  <i class="icon-folderopen fa-hover-show"></i>
+</a>
 
     
  <div class="container">
