--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta content="A showcase of the best design portfolios on the web today. Push button, get portfolio." name="description">
     <meta name="keywords" content="Design, Portfolios, Product Design, Designers, Inspirations, Web Design">
 <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="icons.css">
 <link href="favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
 <link href="favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
