--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </div>
      
 
-      <div id="social"><a class="links social" href="https://twitter.com/@niceportfolio" target="_blank">Twitter</a> / <a class="links social" href="https://www.instagram.com/niceportfolio/" target="_blank">IG</a></div>
+      <div id="social"><a class="links social" href="https://mailchi.mp/8ad0861e1c46/niceportfolio" target="_blank">Newsletter</a></div>
             <div id="submit"><a class="links submit" href="https://forms.gle/An6hbH9TDxuW6yjJ6" target="_blank">Submit folio</a></div>
 
   <script>window.onkeydown = function(event){
