--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
   <span class="fa-hover-hidden">Push button for portfolio</span>
   <span class="fa-hover-show">Push button for portfolio</span>
-    <i class="icon-folderclosed fa-hover-hidden"></i>
-  <i class="icon-folderopen fa-hover-show"></i>
+    <i class="dev-hidden icon-folderclosed fa-hover-hidden"></i>
+  <i class="dev-hidden icon-folderopen fa-hover-show"></i>
 </a>
 
     
