--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta content="A showcase of the best design portfolios on the web today. Push button, get portfolio." name="description">
     <meta name="keywords" content="Design, Portfolios, Product Design, Designers, Inspirations, Web Design">
+    <meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@kimw" />
+<meta name="twitter:title" content="Nice Portfolio" />
+<meta name="twitter:description" content="Design portfolio inspiration at the push of a button." />
+<meta name="twitter:image" content="http://niceportfol.io/niceportfolio_twittercard.png" />
+    
+    
 <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="fonts/icons.css">
 <link href="favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
