--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <i class="dev-hidden icon-folderclosed fa-hover-hidden"></i>
   <i class="dev-hidden icon-folderopen fa-hover-show"></i>
 </a>
-        <div class="spacebar">or hit spacebar</div>
+        <div class="spacebar">or hit <span class="keystyle">spacebar</span></div>
     </div>
 </div>
 
