--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   </nav>
 
   <div id="open_r">
-    <span class="menu-label"><a class="generator" href="#">Folio Tips</a></span>
+    <span class="menu-label"><a class="generator" href="#">Wisdom</a></span>
     
   </div>
 
