--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body id="body" class="light-mode"> 
 
-<h1 color="wheat">Updating – BRB </h1>
+<h1 color="black">Updating – BRB </h1>
 
 
 </body>
